--- a/src/DateTracker/DateTracker.csproj
+++ b/src/DateTracker/DateTracker.csproj
@@ -33,6 +33,12 @@
     <Compile Include="DateTracker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\HomeView.cs" />
+    <Compile Include="Layouting\UserCell.cs" />
+    <Compile Include="Repositories\DateRepository.cs" />
+    <Compile Include="Entities\Arrangement.cs" />
+    <Compile Include="Views\MainView.cs" />
+    <Compile Include="Core\Interfaces\Database\IDatabase.cs" />
+    <Compile Include="Core\Interfaces\Database\ISQLite.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.1.6296\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.1.6296\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
@@ -43,11 +49,20 @@
     <Reference Include="Xamarin.Forms.Xaml">
       <HintPath>..\packages\Xamarin.Forms.1.3.1.6296\lib\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
     </Reference>
+    <Reference Include="SQLite.Net">
+      <HintPath>..\packages\SQLite.Net-PCL.2.5\lib\portable-win8+net45+wp8+wpa81+MonoAndroid1+MonoTouch1\SQLite.Net.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\" />
+    <Folder Include="Layouting\" />
+    <Folder Include="Repositories\" />
+    <Folder Include="Entities\" />
+    <Folder Include="Core\" />
+    <Folder Include="Core\Interfaces\" />
+    <Folder Include="Core\Interfaces\Database\" />
   </ItemGroup>
 </Project>
