Added DB migrations

--- a/src/DateTracker/DateTracker.csproj
+++ b/src/DateTracker/DateTracker.csproj
@@ -39,6 +39,9 @@
     <Compile Include="Views\MainView.cs" />
     <Compile Include="Core\Interfaces\Database\IDatabase.cs" />
     <Compile Include="Core\Interfaces\Database\ISQLite.cs" />
+    <Compile Include="Migrations\MigrationHelper.cs" />
+    <Compile Include="Migrations\Migration_001.cs" />
+    <Compile Include="Migrations\Migration_002.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.1.6296\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.1.6296\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
@@ -64,5 +67,6 @@
     <Folder Include="Core\" />
     <Folder Include="Core\Interfaces\" />
     <Folder Include="Core\Interfaces\Database\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 </Project>
