Added ListEntry edit dialog

--- a/src/DynamicList.Android/Properties/AndroidManifest.xml
+++ b/src/DynamicList.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<uses-sdk android:minSdkVersion="15" />
-	<application>
-	</application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="ch.curcas.DynamicList" android:versionName="Alpha" android:versionCode="01">
+	<uses-sdk />
+	<application android:label="DynamicList"></application>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 </manifest>
